Bug 144173 - EDITING Tracked character format change does not retain multiple character formatting settings
Summary: EDITING Tracked character format change does not retain multiple character fo...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 inReleaseNotes
Keywords:
: 145612 (view as bug list)
Depends on:
Blocks: Track-Changes-TextFormatting
  Show dependency treegraph
 
Reported: 2021-08-30 08:39 UTC by NISZ LibreOffice Team
Modified: 2023-02-02 12:34 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (28.70 KB, application/vnd.oasis.opendocument.text)
2021-08-30 08:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer (21.25 KB, image/png)
2021-08-30 08:39 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer after changing font size – still good (21.77 KB, image/png)
2021-08-30 08:40 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer after rejecting the change (21.73 KB, image/png)
2021-08-30 08:40 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-08-30 08:39:28 UTC
Created attachment 174622 [details]
Example file from Writer

When a text has multiple character formatting settings enabled and a new one is applied with tracked changes, only one of the former settings is restored upon rejecting the changes.

Steps to reproduce:
    1. Open attached document. It contains some text formatted as bold+underlined and bold+italic, with change tracking enabled
    2. Highlight the first paragraph, apply a different font size such as 20 pt
    3. Reject the tracked change

Actual results:
The word Lorem loses the underlined formatting, the word ipsum loses the italic formatting. Only the bold is restored.

Expected results:
The word Lorem should keep the bold+underlined format, the word ipsum should keep the bold+italic format.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d350a1364a1c34b96d00f2f716c44882b7b57fe9
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-08-30 08:39:50 UTC
Created attachment 174623 [details]
Screenshot of the original document in Writer
Comment 2 NISZ LibreOffice Team 2021-08-30 08:40:21 UTC
Created attachment 174624 [details]
Screenshot of the original document in Writer after changing font size – still good
Comment 3 NISZ LibreOffice Team 2021-08-30 08:40:35 UTC
Created attachment 174625 [details]
Screenshot of the original document in Writer after rejecting the change
Comment 4 Commit Notification 2021-08-30 08:48:29 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/97440778670d6b471d8165eb9f86def08e1b8602

tdf#144173 sw track changes: keep format of hints

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2021-09-03 09:44:52 UTC
Verified in: 

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d5ade739771ddf06cc7ee6d4af15672bfcf09ed6
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 6 László Németh 2021-11-25 08:09:48 UTC
*** Bug 145612 has been marked as a duplicate of this bug. ***
Comment 7 stragu 2021-12-30 06:27:38 UTC
Reviewing 7.3 release notes.

Also verified as fixed on Ubuntu 18.04 with:

Version: 7.3.0.1 / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded