tdf#144173 sw track changes: keep format of hints

When a text has multiple character formatting settings
enabled and a new one is applied with tracked changes,
only one of the former settings is restored upon rejecting
the changes.

Follow-up to commit ee3171adb24a3d720466fa43bec869910333f892
"tdf#143918 sw: fix reject of multiple changes".

Change-Id: I6f3fb52dbd536efaf084b1fc5b8032658353af91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121012
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>